src/internal/vm/snapshots/hebi__internal__vm__tests__call_class_method_derived.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
class T:
  v = 0
  fn test(self):
    return self.v
class U(T):
  fn test(self):
    return super.test()
U().test()


# Result:
Int(
    0,
)
