src/internal/vm/snapshots/hebi__internal__vm__tests__call_class_method_derived_static.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
class T:
  fn test(self, v):
    return v
class U(T):
  fn test(self, v=5):
    return super.test(v)
U.test(U())


# Result:
Int(
    5,
)
