src/internal/vm/snapshots/hebi__internal__vm__tests__call_class_nested_inheritance_method.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
class A:
  fn test(self, v):
    return v + 1
class B(A):
  fn test(self, v):
    return super.test(v) + 1
class C(B):
  fn test(self, v):
    return super.test(v) + 1

C().test(0)


# Result:
Int(
    3,
)
