src/internal/vm/snapshots/hebi__internal__vm__tests__call_fn_recursive.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
fn test(v):
  if v: return "yo"
  else: return test(true)

test(true)
test(false)


# Result:
Object(
    "yo",
)
