src/internal/vm/snapshots/hebi__internal__vm__tests__class_derived_nested_init_call_chain.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
class T:
  init(self):
    print("T.init")
class U(T):
  init(self):
    super()
    print("U.init")
class V(U):
  init(self):
    super()
    print("V.init")
_ := V()


# Result:
None

# Output:
T.init
U.init
V.init

