src/internal/vm/snapshots/hebi__internal__vm__tests__class_derived_with_init_and_call_parent_init.snap
---
source: src/internal/vm/tests.rs
expression: snapshot
---
# Source:
class T:
  init(self):
    print("T.init")
class U(T):
  init(self):
    super()
    print("U.init")
_ := U()


# Result:
None

# Output:
T.init
U.init

